# bench-qaoa

./: bench_fastqaoa.py  bench_grad_fast_qaoa.py  bench_grad_pennylane.py  bench_pennylane.py  bench_qiskit.py  bench_qokit.py  max_cut_data_fastqaoa.csv  max_cut_data_pennylane.csv  max_cut_data_qiskit.csv  max_cut_data_qokit.csv  max_cut_grad_fastqaoa.csv  max_cut_grad_pennylane.csv  max_cut_reg_fastqaoa.csv  max_cut_reg_fastqaoa_32.csv  max_cut_reg_pennylane.csv  max_cut_reg_qiskit.csv  max_cut_reg_qokit.csv  plot_comp.py  plot_grad_comp.py  pyproject.toml
