[tool.poetry]
name = "bench-qaoa"
version = "0.1.0"
description = ""
authors = ["David Bucher <d.bucher97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^0.45.2"
fast-qaoa = {path = "../fast-qaoa-c"}
pennylane = "^0.34.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
